# WhisperChain

./: .editorconfig  .eslintrc.json  .gitignore  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  LICENSE  README.md  README_ECOSYSTEM.md  README_ORIGINAL_APP.md  SECURITY.md  jest.config.base.js  package.json  quick-test.sh  quickstart.sh  test-all.sh  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  ecosystem-ci.yml
app/: package.json  tailwind.config.js
app/public/: index.html
app/src/: App.tsx  index.css  index.tsx
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  ECOSYSTEM.md  FAQ.md  GETTING_STARTED.md  LANGUAGE_GUIDE.md  PERFORMANCE.md  ROADMAP.md  TESTING.md
examples/bash/: .env.example  README.md  deploy-contract.sh  node-setup.sh
examples/cairo/: README.md  token.cairo
examples/clarity/: .env.example  Clarinet.toml  README.md
examples/cpp/: CMakeLists.txt  README.md
examples/cpp/crypto/: keccak256.cpp  keccak256.h  secp256k1_wrapper.cpp  secp256k1_wrapper.h
examples/cpp/examples/: main.cpp
examples/crystal/: README.md  shard.yml
examples/elixir/: README.md  mix.exs
examples/erlang/: README.md  rebar.config
examples/fsharp/: BlockchainAnalyzer.fsproj  README.md
examples/go/: .env.example  README.md  go.mod
examples/haskell-plutus/: README.md  WhisperToken.hs
program/: Cargo.toml  build.sh  deploy.sh
program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
scripts/: setup.sh  test-all.sh
(+82 files in other folders)
